--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@aws-cdk/core": "1.130.0",
+    "@aws-cdk/aws-budgets": "1.130.0",
     "source-map-support": "^0.5.16"
   }
 }
