--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@aws-cdk/aws-codepipeline": "1.130.0",
     "@aws-cdk/aws-codepipeline-actions": "1.130.0",
     "@aws-cdk/aws-codebuild": "1.130.0",
+    "@aws-cdk/aws-lambda": "1.130.0",
+    "@aws-cdk/aws-apigatewayv2": "1.130.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "1.130.0",
     "source-map-support": "^0.5.16"
   },
   "dependencies": {}
