--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "@aws-cdk/aws-lambda": "1.130.0",
     "@aws-cdk/aws-apigatewayv2": "1.130.0",
     "@aws-cdk/aws-apigatewayv2-integrations": "1.130.0",
+    "@aws-cdk/aws-events": "1.130.0",
+    "@aws-cdk/aws-events-targets": "1.130.0",
+    "@aws-cdk/aws-sns": "1.130.0",
+    "@aws-cdk/aws-sns-subscriptions": "1.130.0",
     "source-map-support": "^0.5.16"
   },
   "dependencies": {}
